# stm32h755-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  flake.nix  stm32h755.ioc
CM4/Core/Inc/: stm32h7xx_it.h
CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c
CM7/Core/Inc/: main.h
CM7/Core/Src/: main.c  sysmem.c
Common/Src/: system_stm32h7xx_dualcore_boot_cm4_cm7.c
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_dma_ex.h  stm32h7xx_hal_flash.h  stm32h7xx_hal_gpio.h  stm32h7xx_hal_hsem.h  stm32h7xx_hal_i2c.h  stm32h7xx_hal_mdma.h  stm32h7xx_hal_rcc.h  stm32h7xx_hal_rcc_ex.h  stm32h7xx_hal_tim_ex.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c  stm32h7xx_hal_dma.c  stm32h7xx_hal_exti.c  stm32h7xx_hal_flash.c  stm32h7xx_hal_flash_ex.c  stm32h7xx_hal_gpio.c  stm32h7xx_hal_i2c.c  stm32h7xx_hal_mdma.c  stm32h7xx_hal_pwr.c  stm32h7xx_hal_pwr_ex.c  stm32h7xx_hal_rcc.c  stm32h7xx_hal_rcc_ex.c  stm32h7xx_hal_tim.c  stm32h7xx_hal_tim_ex.c
stm32h755/: .gitignore  .mxproject  .project  Makefile  stm32h755.ioc
stm32h755/CM4/: .cproject  .gitignore  .project  CMakeLists.txt
stm32h755/CM4/Core/Inc/: stm32h7xx_hal_conf.h
stm32h755/CM4/Core/Src/: main.c
stm32h755/CM7/: .cproject  .project  CMakeLists.txt
stm32h755/CM7/Core/Src/: main.c
stm32h755/Drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7xx.h
stm32h755/Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h  stm32h7xx_hal_cortex.h  stm32h7xx_hal_def.h  stm32h7xx_hal_dma.h  stm32h7xx_hal_exti.h  stm32h7xx_hal_flash_ex.h  stm32h7xx_hal_gpio_ex.h  stm32h7xx_hal_i2c_ex.h  stm32h7xx_hal_pwr.h  stm32h7xx_hal_pwr_ex.h  stm32h7xx_hal_tim.h
stm32h755/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
stm32h755/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_cortex.c  stm32h7xx_hal_dma_ex.c  stm32h7xx_hal_hsem.c  stm32h7xx_hal_i2c_ex.c
stm32h755/cmake/: arm-build.cmake
